[metadata]
name = wisecondorx
version = 2.0.0
description = description="WisecondorX -- an evolved WISECONDOR"
long_description = file: README.md
author = "Matthias De Smet, Lennart Raman",
author_email = "ict@cmgg.be",
license = "by-nc-sa"
license_file = LICENSE.md
platforms = unix, linux, osx, win32
keywords=
        bioinformatics
        biology
        sequencing
        NGS
        next generation sequencing
        CNV
        SWGS
        Shallow Whole Genome Sequencing
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
packages = wisecondorx
package_dir =
    =src
include_package_data=True
python_requires= >=3.6
install_requires =
    scipy
    scikit-learn
    pysam
    numpy
    typer
zip_safe = False

[options.entry_points]
    console_scripts =
        wisecondorx = wisecondorx.main:app
        WisecondorX = wisecondorx.main:app
        wisecondorX = wisecondorx.main:app


[options.extras_require]
testing =
    flake8
    black
    pre-commit

[options.package_data]
cmgg_ngs_utils = py.typed
